[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Yoni Gottesman <yonigo10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
black = "^23.3.0"
isort = "^5.12.0"
uvicorn = "^0.21.1"
python-multipart = "^0.0.6"
openai = "^0.27.4"
ipykernel = "^6.22.0"
ffmpeg-python = "^0.2.0"
bs4 = "^0.0.1"
pypdf2 = "^3.0.1"
flake8 = "^6.0.0"
numpy = "^1.24.2"
tiktoken = "^0.3.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
